--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browser-image-compression": "^2.0.2",
     "highlight.js": "^11.11.1",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
